<resources>
    <string name="app_name">DiarioDoSeriador2</string>

    <string name="titulo_fragmentseries">Lista de séries</string>
    <string name="title_fragment_detalheserie">Detalhes da Série</string><string name="title_fragment_edicaoserie">Edição da Série</string>
    <string name="title_fragment_novaserie">Nova Série</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tabs_todos">Todos</string>
    <string name="tabs_netflix">Netflix</string>
    <string name="tabs_hbo">HBO</string>
    <string name="tabs_abc">ABC</string>
    <string name="tabs_cw">CW</string>

    <string name="tipo_todos">Todos</string>
    <string name="tipo_netflix">Netflix</string>
    <string name="tipo_hbo">HBO</string>
    <string name="tipo_abc">ABC</string>
    <string name="tipo_cw">CW</string>

    <string name="tipo_textview">Tipo:</string>
    <string name="nome_textview">Nome:</string>
    <string name="dataini_textview">Data início:</string>
    <string name="datafim_textview">Data fim:</string>
    <string name="temporadas_textview">Número de temporadas:</string>
    <string name="Foto_textview">Foto:</string>
    <string name="Info_textview">Vídeo:</string>
    <string name="urlfoto_textview">URL Foto:</string>
    <string name="urlvideo_textview">URL Vídeo:</string>
    <string name="urlvideo_hint">Clique para obter a URL</string>

    <string name="action_salvar">Salvar</string>
    <string name="action_excluir">Excluir</string>
    <string name="action_editar">Editar</string>
    <string name="action_pesquisar">Pesquisar</string>

    <string name="nav_configuracoes">Configurações</string>
    <string name="nav_listseries">Lista de séries</string>
    <string name="nav_sobre">Sobre</string>
    <string name="hint_pesquisar">Nome da série</string>

    <string name="val_dadosinputs">Você deve inserir o nome, a data de início e o número de temporadas da série.</string>

    <string name="direitos_autorais">IFSul Bagé - todos os direitos reservados.</string>
    <string name="toast_message_noVideo">Não há video.</string>


    <string name="alert_title_wait">Aguarde</string>
    <string name="alert_message_processando">Processando ...</string>
    <string name="alertdialog_buttom_ok">OK</string>
    <string name="alert_title_resultadodaoperacao">Resultado da Operação</string>
    <string name="alert_message_realizadacomsucesso">Realizada com sucesso.</string>
    <string name="alert_message_erroaorealizaroperacao">Erro ao realizar a operação. Por favor, avise o desenvolvedor.</string>
</resources>
